fix: calculate epic start/end time at service layer, refactor code
Move epic start time and end time calculating from a model class to
a service layer. It protects the model class from modifications if
business logic changes.

Add type and endTime to output of toString() of Task, Epic, Subtask
to monitor values of these properties.

Use keySet() to iterate through task/epic/subtask ids instead of using
values() and mapping task -> task::getId(). It makes code shorter.

Use text blocks for long string literals to make code cleaner.

Use switch with pattern matching in a file backed task manager to make
it easier to read.